--- a/src/styles/modules/_block-weather-tip.styl
+++ b/src/styles/modules/_block-weather-tip.styl
@@ -14,6 +14,7 @@
     margin 0
     text-align center
     padding rem(15px) rem(15px) rem(16px)
+    transition: all .15s
 
     +above(m)
       display inline-block
@@ -29,6 +30,13 @@
       height rem(18.5px)
       width rem(29px)
       margin-right: .5rem
-      transition: background-color .1s ease-in
+      transition: background-color .15s ease-in
       vertical-align text-bottom
       mask: embedurl("../sprites/weather.svg", "utf8") no-repeat 50% 50%/100% auto
+
+    &:hover
+      background-color $module-weather-tip-background-hover-color
+      box-shadow $module-weather-tip-hover-box-shadow
+      color $module-weather-tip-text-hover-color
+      &:before
+        background-color: $module-weather-tip-icon-hover-color
