--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -465,9 +465,13 @@ $module-story-share-size-desktop = rem(21px)
 // ------ BLOCK
 // ------ WEATHER TIP
 $module-weather-tip-background-color = $light-blue
+$module-weather-tip-background-hover-color = $medium-blue
 $module-weather-tip-icon-color = $navy
+$module-weather-tip-icon-hover-color = $yellow
 $module-weather-tip-text-color = $white
+$module-weather-tip-text-hover-color = $white
 $module-weather-tip-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) rgba(0,0,0,0.1)
+$module-weather-tip-hover-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) rgba(0,0,0,0)
 
 $module-weather-tip-text-font = $sans-serif-headline
 $module-weather-tip-text-transform = uppercase
@@ -480,6 +484,7 @@ $module-weather-tip-text-size-desktop = rem(12px)
 // ------ NEWS/EVENTS ON HOMEPAGE
 
 $module-news-events-home-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-news-events-home-hover-box-shadow = inset 0 0 rem(30px) 0 rgba($black,.15)
 $module-news-events-home-background-color = $white
 $module-news-events-home-background-hover-color = $light-blue
 $module-news-events-home-border-width = rem(2px)
