--- a/src/styles/modules/_block-news-events-home.styl
+++ b/src/styles/modules/_block-news-events-home.styl
@@ -66,7 +66,7 @@
       &:hover
         background-color $module-news-events-home-background-hover-color
         border-bottom-color darken($module-news-events-home-background-hover-color, 15%)
-        box-shadow: inset 0 0 rem(30px) 0 rgba($black,0.15)
+        box-shadow: $module-news-events-home-hover-box-shadow
         h3
           color $module-news-events-home-type-hover-color
         h2
