inline and asset file stamps

--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -13,10 +13,10 @@
 <meta name="theme-color" content="#ffffff">
 
 {# Base #}
-{% do view.registerCssFile("/assets/css/master.css") %}
+{% do view.registerCssFile(craft.stamp.er('/assets/css/master.css')) %}
 
-<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-{% do view.registerJsFile("/assets/js/scripts.js") %}
+{% do view.registerJsFile('//code.jquery.com/jquery-3.2.1.min.js') %}
+{% do view.registerJsFile(craft.stamp.er('/assets/js/scripts.js')) %}
 
 {{ head() }}
 
