--- a/templates/modules/content/_block-location.twig
+++ b/templates/modules/content/_block-location.twig
@@ -5,6 +5,6 @@
     <p>{{ entry.locationText|nl2br|raw }}</p>
   </div>
   <figure>
-    {{ source('svg/indiana_map.svg') }}
+    {{ craft.inlin.er('../src/images/indiana_map.svg') | raw }}
   </figure>
 </section>
