better spotlight styling

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -432,6 +432,7 @@ $module-mayors-welcome-text-size-desktop = rem(18px)
 // ------ SPOTLIGHT
 
 $module-spotlight-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-spotlight-box-shadow-hover = 0 0 rem(15px) rgba($black,.2)
 $module-spotlight-background-color = $white
 
 $module-spotlight-name-font = $sans-serif-headline
@@ -443,6 +444,7 @@ $module-spotlight-name-size-desktop = rem(28px)
 $module-spotlight-title-font = $serif
 $module-spotlight-title-style = italic
 $module-spotlight-title-color = $light-blue
+$module-spotlight-title-arrow-color = $light-blue
 $module-spotlight-title-size-mobile = rem(18px)
 $module-spotlight-title-size-desktop = rem(24px)
 
