global style tweaks, added new header image aspect ratio

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -355,6 +355,7 @@ $module-meta-weight = 700
 // ------ SUB-PAGE BLOCKS (FOR LANDING PAGES)
 
 $module-subpages-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-subpages-box-shadow-hover = 0 0 rem(30px) rgba($black,.2)
 $module-subpages-background-color = $white
 $module-subpages-link-font = $sans-serif-headline
 $module-subpages-link-transform = uppercase
@@ -362,8 +363,7 @@ $module-subpages-link-color = $light-blue
 $module-subpages-link-size = rem(18px)
 $module-subpages-link-decoration = none
 $module-subpages-link-weight = 700
-$module-subpages-arrow-color = $medium-blue
-$module-subpages-link-hover-color = $medium-blue
+$module-subpages-arrow-color = $light-blue
 
 // ------------------------------------------------------
 // ------ BLOCK
@@ -378,14 +378,14 @@ $module-quick-links-link-color = $light-blue
 $module-quick-links-link-size = rem(16px)
 $module-quick-links-link-decoration = none
 $module-quick-links-link-weight = 700
-$module-quick-links-arrow-color = $medium-blue
-$module-quick-links-link-hover-color = $medium-blue
+$module-quick-links-arrow-color = $light-blue
 
 // ------------------------------------------------------
 // ------ BUTTONS
 
 $button-background = $light-blue
-$button-box-shadow = 0 0 rem(7.5px) rgba($black,.2)
+$button-box-shadow = 0 0 rem(7.5px) rgba($black,.1)
+$button-hover-box-shadow = 0 0 rem(15px) rgba($black,.2)
 $button-text-color = $white
 $button-font = $sans-serif-headline
 $button-font-size = rem(14px)
@@ -394,7 +394,6 @@ $button-line-height = 1
 $button-transform = uppercase
 $button-padding = rem(28.5px)
 $button-hover-background = $medium-blue
-$button-hover-box-shadow = 0 0 rem(15px) rgba($black,.1)
 
 // ------------------------------------------------------
 // ------ HOMEPAGE
