--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -1,6 +1,4 @@
 .block--subpage
-  background-color $module-subpages-background-color
-  box-shadow $module-subpages-box-shadow
   margin-bottom 2em
 
   figure
@@ -10,7 +8,11 @@
       @extend $lazy-load
 
   a
+    display block
+    background-color $module-subpages-background-color
+    box-shadow $module-subpages-box-shadow
     text-decoration $module-subpages-link-decoration
+    transition: box-shadow .15s ease-in
 
   h3
     color $module-subpages-link-color
@@ -31,10 +33,11 @@
       width rem(16px)
       mask: embedurl("../sprites/arrow-right.svg", "utf8") no-repeat 50% 50%/12px 12px
       margin-left: 0.15em
-      transition: background-color .1s ease-in, margin-left .15s ease-in
+      transition: background-color .15s ease-in, margin-left .15s ease-in
       vertical-align middle
 
   a:hover
+    box-shadow $module-subpages-box-shadow-hover
     h3
       color $module-subpages-link-hover-color
       &:after
