--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -1,4 +1,5 @@
 $landingImageRatio = (5/12)
+$standardImageRatio = (25/72)
 $newsImageRatio = ((1/3) * 100)%
 
 .parallax__layer--base #page--inner--columns
@@ -30,9 +31,12 @@ $newsImageRatio = ((1/3) * 100)%
 
   .page-section--homepage
   .page-type--landing
-  .page-type--standard
     .parallax .parallax__layer--base
       top: 'calc(100vw * %s)' % $landingImageRatio
+
+  .page-type--standard
+    .parallax .parallax__layer--base
+      top: 'calc(100vw * %s)' % $standardImageRatio
 
   .page-section--newsEvents
     .parallax .parallax__layer--base
