--- a/src/styles/inc/_hidden.styl
+++ b/src/styles/inc/_hidden.styl
@@ -1,10 +1,6 @@
 .hide-text
-  position: absolute
+  position: fixed !important
+  _position: absolute !important
   clip: rect(1px 1px 1px 1px)
+  /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px)
-  clip-path: inset(0px 0px 99.9% 99.9%)
-  overflow: hidden
-  height: 1px
-  width: 1px
-  padding: 0
-  border: 0
