--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -17,56 +17,13 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import '@fancyapps/fancybox/dist/jquery.fancybox.css'
 
 @import './inc/_box-sizing'
-// @import './inc/_aspect-ratios'
 @import './inc/_images'
-// @import './inc/_background-size'
-// @import './inc/_background-position'
-// @import './inc/_outlines'
-// @import './inc/_borders'
-// @import './inc/_border-colors'
-// @import './inc/_border-radius'
-// @import './inc/_border-style'
-// @import './inc/_border-widths'
-// @import './inc/_box-shadow'
-// @import './inc/_code'
-// @import './inc/_coordinates'
-// @import './inc/_clears'
-// @import './inc/_display'
-// @import './inc/_flexbox'
-// @import './inc/_floats'
-// @import './inc/_font-family'
-// @import './inc/_font-style'
-// @import './inc/_font-weight'
-// @import './inc/_forms'
-// @import './inc/_heights'
+@import './inc/_code'
+@import './inc/_forms'
 @import './inc/_hidden'
-// @import './inc/_letter-spacing'
-// @import './inc/_line-height'
-// @import './inc/_links'
-// @import './inc/_lists'
-// @import './inc/_max-widths'
-// @import './inc/_widths'
-// @import './inc/_overflow'
-// @import './inc/_position'
-// @import './inc/_opacity'
-// @import './inc/_rotations'
-// @import './inc/_skins'
-// @import './inc/_skins-pseudo'
-// @import './inc/_spacing'
-// @import './inc/_negative-margins'
-// @import './inc/_tables'
-// @import './inc/_text-decoration'
-// @import './inc/_text-align'
-// @import './inc/_text-transform'
-// @import './inc/_type-scale'
-// @import './inc/_typography'
-// @import './inc/_utilities'
-// @import './inc/_visibility'
-// @import './inc/_white-space'
-// @import './inc/_vertical-align'
-// @import './inc/_hovers'
-// @import './inc/_z-index'
-// @import './inc/_nested'
+@import './inc/_tables'
+@import './inc/_typography'
+@import './inc/_z-index'
 @import './inc/_buttons'
 
 @import './modules/_main-menu'
