--- a/src/styles/modules/_block-home-featured-video.styl
+++ b/src/styles/modules/_block-home-featured-video.styl
@@ -93,7 +93,7 @@
     text-align center
     text-decoration none
     text-transform $module-video-feature-video-transform
-    transition: color .15s ease-in
+    transition: $link-transition
     z-index 5
     +above(m)
       lost-offset 4/36
