--- a/src/styles/modules/_block-process.styl
+++ b/src/styles/modules/_block-process.styl
@@ -14,7 +14,7 @@
     a
       color $module-process-link-color
       text-decoration $module-process-link-decoration
-      transition: color .15s ease-in
+      transition: $link-transition
       display block
       &:hover
         color $module-process-link-hover-color
