--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -66,7 +66,7 @@ aside #block--quick-links
   a
     color $module-quick-links-link-color
     text-decoration $module-quick-links-link-decoration
-    transition: color .15s ease-in
+    transition: $link-transition
     &:after
       background-color: $module-quick-links-arrow-color
       background-repeat: no-repeat
