--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -22,7 +22,7 @@
     margin 0
     padding 1em
     text-transform $module-subpages-link-transform
-    transition: color .15s ease-in
+    transition: $link-transition
     &:after
       background-color: $module-subpages-arrow-color
       background-repeat: no-repeat
