--- a/src/styles/modules/_footer.styl
+++ b/src/styles/modules/_footer.styl
@@ -63,7 +63,7 @@ footer
         padding: 1em 1em
         text-align: center
         text-decoration: none
-        transition: color .15s ease-in
+        transition: $link-transition
         &:hover
           color: $footer-link-hover-color
         +above(tablet-min)
@@ -142,7 +142,7 @@ footer
 
   a
     color: $footer-copyright-link-color
-    transition: color .15s ease-in
+    transition: $link-transition
     &:hover
       color: $footer-copyright-link-hover-color
   > nav
