--- a/src/styles/modules/_main-menu.styl
+++ b/src/styles/modules/_main-menu.styl
@@ -98,7 +98,7 @@
     padding: 0 1em
     text-decoration: none
     text-transform: uppercase
-    transition: color .15s ease-in
+    transition: $link-transition
     +above(desktop-min)
       padding: 0 1.92857em
     &:hover
