--- a/src/styles/modules/_side-menu.styl
+++ b/src/styles/modules/_side-menu.styl
@@ -92,7 +92,7 @@
         text-shadow: 0 0 1px rgba(255, 255, 255, 0.1)
         letter-spacing: 1px
         text-decoration: none
-        transition: color .15s ease-in
+        transition: $link-transition
         &:hover
           color: $side-menu-link-hover-color
 
