--- a/src/styles/site/_landing.styl
+++ b/src/styles/site/_landing.styl
@@ -18,7 +18,7 @@
         h1
           font-family: $sans-serif-headline
           font-size rem(36px)
-          font-weight 700
+          font-weight $font-weight-bold
           color $navy
           text-align center
           text-transform: uppercase
