--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -39,6 +39,10 @@ $line-height-solid = 1
 $line-height-title = 1.25
 $line-height-copy = 1.5
 
+$font-weight-normal = 400
+$font-weight-semibold = 600
+$font-weight-bold = 700
+
 $black = #000
 $near-black = #111
 // $dark-gray = #333
@@ -54,31 +58,33 @@ $white = #fff
 
 $transparent = transparent
 
-$black-90 = rgba(0,0,0,.9)
-$black-80 = rgba(0,0,0,.8)
-$black-70 = rgba(0,0,0,.7)
-$black-60 = rgba(0,0,0,.6)
-$black-50 = rgba(0,0,0,.5)
-$black-40 = rgba(0,0,0,.4)
-$black-30 = rgba(0,0,0,.3)
-$black-20 = rgba(0,0,0,.2)
-$black-10 = rgba(0,0,0,.1)
-$black-05 = rgba(0,0,0,.05)
-$black-025 = rgba(0,0,0,.025)
-$black-0125 = rgba(0,0,0,.0125)
+$black-90 = rgba($black,.9)
+$black-80 = rgba($black,.8)
+$black-70 = rgba($black,.7)
+$black-60 = rgba($black,.6)
+$black-50 = rgba($black,.5)
+$black-40 = rgba($black,.4)
+$black-30 = rgba($black,.3)
+$black-20 = rgba($black,.2)
+$black-15 = rgba($black,.15)
+$black-10 = rgba($black,.1)
+$black-05 = rgba($black,.05)
+$black-025 = rgba($black,.025)
+$black-0125 = rgba($black,.0125)
+$black-00 = rgba($black,0)
 
-$white-90 = rgba(255,255,255,.9)
-$white-80 = rgba(255,255,255,.8)
-$white-70 = rgba(255,255,255,.7)
-$white-60 = rgba(255,255,255,.6)
-$white-50 = rgba(255,255,255,.5)
-$white-40 = rgba(255,255,255,.4)
-$white-30 = rgba(255,255,255,.3)
-$white-20 = rgba(255,255,255,.2)
-$white-10 = rgba(255,255,255,.1)
-$white-05 = rgba(255,255,255,.05)
-$white-025 = rgba(255,255,255,.025)
-$white-0125 = rgba(255,255,255,.0125)
+$white-90 = rgba($white,.9)
+$white-80 = rgba($white,.8)
+$white-70 = rgba($white,.7)
+$white-60 = rgba($white,.6)
+$white-50 = rgba($white,.5)
+$white-40 = rgba($white,.4)
+$white-30 = rgba($white,.3)
+$white-20 = rgba($white,.2)
+$white-10 = rgba($white,.1)
+$white-05 = rgba($white,.05)
+$white-025 = rgba($white,.025)
+$white-0125 = rgba($white,.0125)
 
 $dark-red = #e7040f
 $red = #ff4136
@@ -138,8 +144,8 @@ $background-gray = $snow
 $body-font-family = $sans-serif
 $body-background-color = $white
 
-$global-block-box-shadow = 0 0 rem(15px) rgba($black,.1)
-$global-block-box-shadow-hover = 0 0 rem(30px) rgba($black,.15)
+$global-block-box-shadow = 0 0 rem(15px) $black-10
+$global-block-box-shadow-hover = 0 0 rem(30px) $black-15
 $link-transition = color .15s ease-in
 
 // ------------------------------------------------------
@@ -149,10 +155,10 @@ $top-menu-background-color = $white
 $top-menu-toggle-icon-color = $light-blue
 $top-menu-font-family = $sans-serif-headline
 $top-menu-main-font-size = rem(14px)
-$top-menu-main-font-weight = 700
+$top-menu-main-font-weight = $font-weight-bold
 $top-menu-link-color = $navy
 $top-menu-link-hover-color = $light-blue
-$top-menu-bottom-shadow = 0 2px 10px rgba($black, 0.1)
+$top-menu-bottom-shadow = 0 rem(2px) rem(10px) $black-10
 $top-menu-height-mobile = rem(80px)
 $top-menu-height-desktop = rem(94px)
 
@@ -167,7 +173,7 @@ $footer-link-color = $footer-text-color
 $footer-link-hover-color = $light-blue
 $footer-link-font-family = $sans-serif-headline
 $footer-link-font-size = rem(14px)
-$footer-link-font-weight = 700
+$footer-link-font-weight = $font-weight-bold
 
 $footer-copyright-background-color = $background-gray
 $footer-copyright-text-color = $footer-text-color
@@ -176,7 +182,7 @@ $footer-copyright-link-hover-color = $footer-link-hover-color
 $footer-copyright-font-family = $sans-serif
 $footer-copyright-font-size = rem(10px)
 $footer-copyright-font-size-desktop = rem(14px)
-$footer-copyright-font-weight = 400
+$footer-copyright-font-weight = $font-weight-normal
 
 // ------------------------------------------------------
 // ------ SIDE MENU
@@ -189,9 +195,9 @@ $side-menu-link-hover-color = $light-blue
 $side-menu-close-icon-color = $light-blue
 $side-menu-font-family = $sans-serif-headline
 $side-menu-main-font-size = rem(24px)
-$side-menu-main-font-weight = 700
+$side-menu-main-font-weight = $font-weight-bold
 $side-menu-sub-font-size = rem(14px)
-$side-menu-sub-font-weight = 700
+$side-menu-sub-font-weight = $font-weight-bold
 $side-menu-sub-line-color = $dark-blue
 
 // ------------------------------------------------------
@@ -201,7 +207,7 @@ $bread-background-color = $background-gray
 $bread-font-family = $sans-serif-headline
 $bread-font-size-mobile = rem(10px)
 $bread-font-size-desktop = rem(12px)
-$bread-font-weight = 700
+$bread-font-weight = $font-weight-bold
 $bread-text-transform = uppercase
 $bread-link-color = $navy
 $bread-current-page-color = $light-blue
@@ -230,7 +236,7 @@ $content-text-line-height = $line-height-copy
 
 $content-link-color = $light-blue
 $content-link-decoration = none
-$content-link-weight = 700
+$content-link-weight = $font-weight-bold
 $content-link-hover-color = $medium-blue
 $content-link-hover-decoration = underline
 
@@ -243,11 +249,11 @@ $content-blockquote-cite-margin-top = 1em
 
 $content-blockquote-cite-color = $navy
 $content-blockquote-cite-size = rem(18px)
-$content-blockquote-cite-weight = 700
+$content-blockquote-cite-weight = $font-weight-bold
 $content-blockquote-cite-style = normal
 $content-blockquote-cite2-color = $navy
 $content-blockquote-cite2-style = italic
-$content-blockquote-cite2-weight = 700
+$content-blockquote-cite2-weight = $font-weight-bold
 
 // ------------------------------------------------------
 // ------ HEADERS
@@ -256,14 +262,14 @@ $header-text-color = $navy
 $header-text-font = $sans-serif
 $header-text-size = rem(40)
 $header-text-style = normal
-$header-text-weight = 700
+$header-text-weight = $font-weight-bold
 $header-text-line-height = $line-height-title
 
 $header-block-title-color = $white
 $header-block-title-font = $sans-serif-headline
 $header-block-title-size-mobile = rem(36)
 $header-block-title-size-desktop = rem(60)
-$header-block-title-weight = 700
+$header-block-title-weight = $font-weight-bold
 $header-block-title-transform = uppercase
 
 $header-image-top-margin-news-desktop = rem(40px)
@@ -276,7 +282,7 @@ $module-lead-in-color = $light-blue
 $module-lead-in-size = rem(21px)
 $module-lead-in-line-height = $line-height-title
 $module-lead-in-style = italic
-$module-lead-in-weight = 700
+$module-lead-in-weight = $font-weight-bold
 
 // ------------------------------------------------------
 // ------ PAGE META
@@ -287,7 +293,7 @@ $module-meta-size = rem(14px)
 $module-meta-line-height = $line-height-title
 $module-meta-style = normal
 $module-meta-transform = uppercase
-$module-meta-weight = 700
+$module-meta-weight = $font-weight-bold
 
 // ------------------------------------------------------
 // ------ SUB-PAGE BLOCKS (FOR LANDING PAGES)
@@ -300,7 +306,7 @@ $module-subpages-link-transform = uppercase
 $module-subpages-link-color = $light-blue
 $module-subpages-link-size = rem(18px)
 $module-subpages-link-decoration = none
-$module-subpages-link-weight = 700
+$module-subpages-link-weight = $font-weight-bold
 $module-subpages-arrow-color = $light-blue
 
 // ------------------------------------------------------
@@ -315,19 +321,19 @@ $module-quick-links-title-transform = uppercase
 $module-quick-links-link-color = $light-blue
 $module-quick-links-link-size = rem(16px)
 $module-quick-links-link-decoration = none
-$module-quick-links-link-weight = 700
+$module-quick-links-link-weight = $font-weight-bold
 $module-quick-links-arrow-color = $light-blue
 
 // ------------------------------------------------------
 // ------ BUTTONS
 
 $button-background = $light-blue
-$button-box-shadow = 0 0 rem(7.5px) rgba($black,.1)
-$button-hover-box-shadow = 0 0 rem(15px) rgba($black,.2)
+$button-box-shadow = 0 0 rem(7.5px) $black-10
+$button-hover-box-shadow = 0 0 rem(15px) $black-20
 $button-text-color = $white
 $button-font = $sans-serif-headline
 $button-font-size = rem(14px)
-$button-font-weight = 700
+$button-font-weight = $font-weight-bold
 $button-line-height = $line-height-solid
 $button-transform = uppercase
 $button-padding = rem(28.5px)
@@ -340,7 +346,7 @@ $homepage-header-block-title-color = $white
 $homepage-header-block-title-font = $sans-serif-headline
 $homepage-header-block-title-size-mobile = rem(14)
 $homepage-header-block-title-size-desktop = rem(18)
-$homepage-header-block-title-weight = 700
+$homepage-header-block-title-weight = $font-weight-bold
 $homepage-header-block-title-transform = uppercase
 
 
@@ -395,7 +401,7 @@ $module-story-share-background-color = $navy
 
 $module-story-share-font = $sans-serif
 $module-story-share-color = $white
-$module-story-share-weight = 700
+$module-story-share-weight = $font-weight-bold
 $module-story-share-size-mobile = rem(18px)
 $module-story-share-size-desktop = rem(21px)
 
@@ -409,8 +415,8 @@ $module-weather-tip-icon-color = $navy
 $module-weather-tip-icon-hover-color = $yellow
 $module-weather-tip-text-color = $white
 $module-weather-tip-text-hover-color = $white
-$module-weather-tip-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) rgba(0,0,0,0.1)
-$module-weather-tip-hover-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) rgba(0,0,0,0)
+$module-weather-tip-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) $black-10
+$module-weather-tip-hover-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) $black-00
 
 $module-weather-tip-text-font = $sans-serif-headline
 $module-weather-tip-text-transform = uppercase
@@ -470,7 +476,7 @@ $module-video-feature-subheadline-size-desktop = rem(24px)
 
 $module-video-feature-video-font = $sans-serif-headline
 $module-video-feature-video-transform = uppercase
-$module-video-feature-video-font-weight = 700
+$module-video-feature-video-font-weight = $font-weight-bold
 $module-video-feature-video-color = $white
 $module-video-feature-video-hover-color = $light-blue
 $module-video-feature-video-font-size = rem(18px)
@@ -509,7 +515,7 @@ $module-process-link-hover-color = $medium-blue
 $module-process-link-decoration = underline
 
 $module-process-text-font = $sans-serif
-$module-process-text-font-weight = 600
+$module-process-text-font-weight = $font-weight-semibold
 $module-process-text-size-mobile = rem(14px)
 $module-process-text-size-desktop = rem(14px)
 
