--- a/src/styles/modules/_block-location.styl
+++ b/src/styles/modules/_block-location.styl
@@ -30,7 +30,7 @@
   h2
   h3
     font-family $module-location-headline-font
-    line-height 1.1
+    line-height $line-height-title
     margin 0
     text-transform $module-location-headline-transform
 
@@ -53,7 +53,7 @@
   p
     color $module-location-text-color
     font-size $module-location-text-size-mobile
-    line-height 1.55
+    line-height $line-height-copy
     margin-bottom 0
     +above(m)
       font-size $module-location-text-size-desktop
