--- a/src/styles/modules/_block-news-events-home.styl
+++ b/src/styles/modules/_block-news-events-home.styl
@@ -17,7 +17,7 @@
     text-transform $module-news-events-home-headline-transform
     color $module-news-events-home-headline-color
     font-size $module-news-events-home-headline-size-mobile
-    line-height 1
+    line-height $line-height-solid
     margin 0
     padding-top rem(35px)
     padding-bottom rem(33px)
