--- a/src/styles/modules/_block-spotlight.styl
+++ b/src/styles/modules/_block-spotlight.styl
@@ -35,7 +35,7 @@
 
     > h2
       font-family $module-spotlight-name-font
-      line-height 1
+      line-height $line-height-solid
       margin 0
       text-align left
       text-transform $module-spotlight-name-transform
@@ -49,7 +49,7 @@
 
     > h3
       font-family $module-spotlight-title-font
-      line-height 1
+      line-height $line-height-solid
       margin 0
       text-align left
       color $module-spotlight-title-color
