--- a/src/styles/modules/_breadcrumb.styl
+++ b/src/styles/modules/_breadcrumb.styl
@@ -10,7 +10,7 @@
   font-family $bread-font-family
   font-size $bread-font-size-mobile
   font-weight $bread-font-weight
-  line-height 1
+  line-height $line-height-solid
   text-transform $bread-text-transform
 
   height $breadcrumb-total-height-mobile
@@ -29,7 +29,7 @@
     padding-right: ($bread-divider-width / 2)
     &:after
       content: $bread-divider-character
-      line-height: 1
+      line-height: $line-height-solid
       text-align: center
       color: $bread-divider-color
       position: absolute
