--- a/src/styles/modules/_block-mayor-welcome.styl
+++ b/src/styles/modules/_block-mayor-welcome.styl
@@ -50,7 +50,7 @@
   > h2
   > h3
     font-family $module-mayors-welcome-title-font
-    line-height 1.1
+    line-height $line-height-title
     margin 0
     text-align center
     text-transform $module-mayors-welcome-title-transform
@@ -73,7 +73,7 @@
   > p
     color $module-mayors-welcome-text-color
     font-size $module-mayors-welcome-text-size-mobile
-    line-height 1.55
+    line-height $line-height-copy
     margin-bottom 0
     +above(m)
       font-size $module-mayors-welcome-text-size-desktop
