--- a/src/styles/site/_landing.styl
+++ b/src/styles/site/_landing.styl
@@ -17,16 +17,16 @@
         padding-right rem(30px)
         h1
           font-family: $sans-serif-headline
-          font-size rem(36px)
-          font-weight $font-weight-bold
-          color $navy
-          text-align center
+          font-size: rem(36px)
+          font-weight: $font-weight.bold
+          color: $navy
+          text-align: center
           text-transform: uppercase
-          width 100%
+          width: 100%
         p
           color $navy
           font-size rem(18px)
-          line-height 1.3
+          line-height $line-height-copy
         +above(m)
           lost-column 14/36
           lost-offset 11/36
